feat: Use Flusher in MultiCreate endpoint
